<resources>
    <string name="app_name">PetApp</string>

    <string name="login_hint_username">Usuário</string>
    <string name="login_hint_password">Senha</string>
    <string name="login_button_next">Entrar</string>
    <string name="login_button_cancel">Criar perfil</string>
    <string name="login_error_password">A senha deve conter ao menos 8 caracteres.</string>

    <string name="cadastro_title">Novo perfil</string>
    <string name="cadastro_hint_email">E-mail</string>
    <string name="cadastro_button_cadastrar">Criar perfil</string>
    <string name="cadastro_button_voltar">Voltar</string>

    <string name="pet_filter_title">Filtro</string>
    <string name="pet_search_title">Pesquisa</string>
    <string name="pet_product_title">Título</string>
    <string name="pet_product_description">Texto Secundário</string>
    <string name="pet_hint_search">O que você procura?</string>
    <!-- PetApp menu -->
    <string name="pet_services_label">Serviços</string>
    <string name="pet_puppies_label">Filhotes</string>
    <string name="pet_products_label">Produtos</string>
    <string name="pet_adoption_label">Adote um Pet</string>
    <string name="pet_foods_label">Alimentos</string>
    <string name="pet_medicines_label">Medicamentos</string>
    <string name="pet_contact_label">Contato</string>
    <string name="pet_account_label">Perfil</string>


</resources>
